--- a/index.html
+++ b/index.html
@@ -8,5 +8,9 @@
     </head>
     <body>
         <header>Hello World</header>
+
+        <div class="body_section">
+            <input type="email" name="email" id="email" placeholder="enter email">
+        </div>
     </body>
 </html>
