--- a/index.html
+++ b/index.html
@@ -12,5 +12,7 @@
         <div class="body_section">
             <input type="email" name="email" id="email" placeholder="enter email">
         </div>
+
+      <button type="submit">Send</button>
     </body>
 </html>
